@@ -1,3 +1,7 @@
+TB-2008-10-21-0: Bugfix:     Fixed Hedeby test for Issue 571:
+                             Wrong timeout calculation for event detection
+                 Review:     AF
+
 TB-2008-10-20-0: Enhancem.:  Introduced environment variable TS_SKIP_COLLECT_LOG
                              for Hedeby testing. If set to 1, no log files are
                              collected after a failed test run.
